--- a/tango_with_django_project/templates/rango/index.html
+++ b/tango_with_django_project/templates/rango/index.html
@@ -4,16 +4,17 @@
 
 <html>
 
-    <head>
-        <title>Rango</title>
-        <link rel="stylesheet" href="{% static "css/base.css" %}" />
-    </head>
+<head>
+    <title>Rango</title>
+    <link rel="stylesheet" href="{% static " css
+    /base.css" %}" />
+</head>
 
-    <body>
-        <h1>Rango says...</h1>
-        hello world! <strong>{{ boldmessage }}</strong> <br />
-        <a href="/rango/about/">About</a><br />
-        <img src="{% static "images/MakoThumbsUp.png" %}" alt="Good job!" />
-    </body>
+<body>
+<h1>Rango says...</h1>
+hello world! <strong>{{ boldmessage }}</strong> <br/>
+<a href="/rango/about/">About</a><br/>
+<img src="{% static " images/MakoThumbsUp.png" %}" alt="Good job!" />
+</body>
 
 </html>
