--- a/tango_with_django_project/templates/rango/index.html
+++ b/tango_with_django_project/templates/rango/index.html
@@ -6,13 +6,21 @@
 
 <head>
     <title>Rango</title>
-    <link rel="stylesheet" href="{% static " css
-    /base.css" %}" />
 </head>
 
 <body>
-<h1>Rango says...</h1>
-hello world! <strong>{{ boldmessage }}</strong> <br/>
+<h1>Rango says... hello world!</h1>
+
+{% if categories %}
+    <ul>
+        {% for category in categories %}
+        <li>{{ category.name }}</li>
+        {% endfor %}
+    </ul>
+{% else %}
+    <strong>There are no categories present.</strong>
+{% endif %}
+
 <a href="/rango/about/">About</a><br/>
 <img src="{% static " images/MakoThumbsUp.png" %}" alt="Good job!" />
 </body>
