--- a/tango_with_django_project/templates/rango/index.html
+++ b/tango_with_django_project/templates/rango/index.html
@@ -4,25 +4,38 @@
 
 <html>
 
-<head>
-    <title>Rango</title>
-</head>
+    <head>
+        <title>Rango</title>
+    </head>
 
-<body>
-<h1>Rango says... hello world!</h1>
+    <body>
+        <h1>Rango says... hello world!</h1>
 
-{% if categories %}
-    <ul>
-        {% for category in categories %}
-        <li>{{ category.name }}</li>
-        {% endfor %}
-    </ul>
-{% else %}
-    <strong>There are no categories present.</strong>
-{% endif %}
+        {% if categories %}
+            <h2>Top five most liked categories</h2>
+            <ul>
+                {% for category in categories %}
+                <li><a href="/rango/category/{{ category.slug }}">{{ category.name }}</a></li>
+            {% endfor %}
+            </ul>
+        {% else %}
+            <strong>There are no categories present.</strong>
+        {% endif %}
 
-<a href="/rango/about/">About</a><br/>
-<img src="{% static " images/MakoThumbsUp.png" %}" alt="Good job!" />
-</body>
+        <br/>
 
+        {% if pages %}
+            <h2>Top five most viewed pages</h2>
+            <ul>
+                {% for page in pages %}
+                <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+                {% endfor %}
+            </ul>
+        {% else %}
+            <strong>there doesn't seem to be anything here</strong>
+        {% endif %}
+
+        <a href="/rango/about/">About</a><br/>
+        <img src="{% static 'images/MakoThumbsUp.png' %}" alt="Good job!" />
+    </body>
 </html>
