--- a/tango_with_django_project/templates/rango/index.html
+++ b/tango_with_django_project/templates/rango/index.html
@@ -36,6 +36,7 @@
         {% endif %}
 
         <a href="/rango/about/">About</a><br/>
-        <img src="{% static 'images/MakoThumbsUp.png' %}" alt="Good job!" />
+        <img src="{% static 'images/MakoThumbsUp.png' %}" alt="Good job!" /> <br/>
+        <a href="/rango/add_category/">Add a new Category</a><br/>
     </body>
 </html>
