--- a/tango_with_django_project/templates/rango/about.html
+++ b/tango_with_django_project/templates/rango/about.html
@@ -1,17 +1,11 @@
-<!DOCTYPE html>
+{% extends 'base.html' %}
 
 {% load staticfiles %}
 
-<html>
+{% block title %}About Rango{% endblock %}
 
-<head>
-    <title>About Rango</title>
-</head>
-
-<body>
-<h1>Rango says...</h1>
-here is the <strong>{{ boldmessage }}</strong> <br/>
-<img src="{% static " coxy.jpg" %}" alt="Dr. Cox says 'deal with it!'"/> <br/>
-<a href="/rango/">index</a>
-</body>
-</html>
+{% block body_block %}
+    <h1>Rango says...</h1>
+    here is the <strong>{{ boldmessage }}</strong> <br/>
+    <img src="{% static 'coxy.jpg' %}" alt="Dr. Cox says 'deal with it!'"/> <br/>
+{% endblock %}
