--- a/tango_with_django_project/templates/rango/login.html
+++ b/tango_with_django_project/templates/rango/login.html
@@ -1,22 +1,19 @@
-<!DOCTYPE html>
+{% extends 'base.html' %}
 
-<html>
-    <head>
-        <title>Rango</title>
-    </head>
+{% load staticfiles %}
 
-    <body>
-        <h1>Login to Rango</h1>
+{% block title %}Rango{% endblock %}
 
-        <form id="login_form" method="post" action="/rango/login/">
-            {% csrf_token %}
-            Username: <input type="text" name="username" value="" size="50" />
-            <br />
-            Password: <input type="password" name="password" value="" size="50" />
-            <br />
+{% block body_block %}
+    <h1>Login to Rango</h1>
 
-            <input type="submit" value="submit" />
-        </form>
+    <form id="login_form" method="post" action="{% url 'login' %}">
+        {% csrf_token %}
+        Username: <input type="text" name="username" value="" size="50" />
+        <br />
+        Password: <input type="password" name="password" value="" size="50" />
+        <br />
 
-    </body>
-</html>
+        <input type="submit" value="submit" />
+    </form>
+{% endblock %}
