--- a/tango_with_django_project/templates/rango/register.html
+++ b/tango_with_django_project/templates/rango/register.html
@@ -1,20 +1,17 @@
-<!DOCTYPE html>
+{% extends 'base.html' %}
 
-<html>
-    <head>
-        <title>Rango: registration</title>
-    </head>
+{% block title %}registration{% endblock %}
 
-    <body>
-        <h1>Register with Rango</h1>
+{% block body_block %}
+    <h1>Register with Rango</h1>
 
-        Rango says:
-        {% if registered %}
+    Rango says:
+    {% if registered %}
         <strong>Thank you for registering!</strong>
-        <a href="/rango/">Return to the homepage.</a> <br />
-        {% else %}
+        <a href="{% url 'index' %}">Return to the homepage.</a> <br />
+    {% else %}
         <strong>register here!</strong><br />
-        <form id="user_form" method="post" action="/rango/register/"
+        <form id="user_form" method="post" action="{% url 'register' %}"
               enctype="multipart/form-data">
 
             {% csrf_token %}
@@ -28,6 +25,5 @@
             <!-- Provide a button to click to submit the form. -->
             <input type="submit" name="submit" value="Register" />
         </form>
-        {% endif %}
-    </body>
-</html>
+    {% endif %}
+{% endblock %}
