--- a/tango_with_django_project/templates/base.html
+++ b/tango_with_django_project/templates/base.html
@@ -8,11 +8,11 @@
 <div>
     <ul>
         {% if user.is_authenticated %}
-        <li><a href="{% url 'logout' %}">logout</a></li>
+        <li><a href="{% url 'auth_logout' %}?next=/rango/">logout</a></li>
         <li><a href="{% url 'add_category' %}">Add a new Category</a></li>
         {% else %}
-        <li><a href="{% url 'login' %}">Login</a></li>
-        <li><a href="{% url 'register' %}">Register Here</a></li>
+        <li><a href="{% url 'auth_login' %}">Login</a></li>
+        <li><a href="{% url 'registration_register' %}">Register Here</a></li>
         {% endif %}
 
         <li><a href="{% url 'index' %}">Home</a></li>
