chapter 12 - registration redux; small mod to password change: Now redirects to main page following successful password change

--- a/tango_with_django_project/templates/base.html
+++ b/tango_with_django_project/templates/base.html
@@ -10,7 +10,7 @@
         {% if user.is_authenticated %}
         <li><a href="{% url 'auth_logout' %}?next=/rango/">logout</a></li>
         <li><a href="{% url 'add_category' %}">Add a new Category</a></li>
-        <li><a href="{% url 'password_change' %}">Change your password</a></li>
+        <li><a href="{% url 'password_change' %}">Change password</a></li>
         {% else %}
         <li><a href="{% url 'auth_login' %}">Login</a></li>
         <li><a href="{% url 'registration_register' %}">Register Here</a></li>
