chapter 13 - bootstrapping; added style to most pages. index page fully customised. small mods to content from chapter 12.

--- a/tango_with_django_project/templates/rango/add_page.html
+++ b/tango_with_django_project/templates/rango/add_page.html
@@ -1,12 +1,12 @@
-{% extends 'base.html' %}
+{% extends 'page_header.html' %}
 
 {% load staticfiles %}
 
 {% block title %}Add new page{% endblock %}
 
-{% block body_block %}
-    <h1>Add a page to {{ category.name }}</h1>
+{% block header_block %}Add a page to {{ category.name }}{% endblock %}
 
+{% block page_block %}
     <form id="page_form" method="post" action="{% url 'add_page' %}">
 
         {% csrf_token %}
