--- a/tango_with_django_project/templates/registration/logout.html
+++ b/tango_with_django_project/templates/registration/logout.html
@@ -1,6 +1,5 @@
-{% extends "base.html" %}
+{% extends "page_header.html" %}
 
-{% block body_block %}
-<h1>Logged out</h1>
-    <p>You are now logged out</p>
-{% endblock %}
+{% block header_block %}Logged out{% endblock %}
+
+{% block page_block %}<p>You are now logged out</p>{% endblock %}
