--- a/tango_with_django_project/templates/registration/registration_complete.html
+++ b/tango_with_django_project/templates/registration/registration_complete.html
@@ -1,6 +1,5 @@
-{% extends "base.html" %}
+{% extends "page_header.html" %}
 
-{% block body_block %}
-    <h1>Registration complete</h1>
-        <p>You are now registered.</p>
-{% endblock %}
+{% block header_block %}Registration complete{% endblock %}
+
+{% block page_block %}<p>You are now registered.</p>{% endblock %}
