--- a/tango_with_django_project/templates/rango/about.html
+++ b/tango_with_django_project/templates/rango/about.html
@@ -1,16 +1,17 @@
-{% extends 'base.html' %}
+{% extends "page_header.html" %}
 
 {% load staticfiles %}
 
 {% block title %}About Rango{% endblock %}
 
-{% block body_block %}
-    <h1>Rango says...</h1>
-    here is the <strong>{{ boldmessage }}</strong> <br/>
-    {% if visits >= 1 %}
-        Welcome back! You've been to this site {{ visits }} time{% if visits > 1 %}s{% endif %}!
-    {% else %}
-        This appears to be your first time here. Welcome!
-    {% endif %} <br />
-    <img src="{% static 'coxy.jpg' %}" alt="Dr. Cox says 'deal with it!'"/>
+{% block header_block %}About{% endblock %}
+
+{% block page_block %}
+        <p>This is <strong>{{ boldmessage }}</strong>.</p>
+        {% if visits >= 1 %}
+            Welcome back! You've been to this site {{ visits }} time{% if visits > 1 %}s{% endif %}!
+        {% else %}
+            This appears to be your first time here. Welcome!
+        {% endif %} <br />
+        <img src="{% static 'coxy.jpg' %}" alt="Dr. Cox says 'deal with it!'"/>
 {% endblock %}
