--- a/tango_with_django_project/templates/rango/add_category.html
+++ b/tango_with_django_project/templates/rango/add_category.html
@@ -1,12 +1,12 @@
-{% extends 'base.html' %}
+{% extends 'page_header.html' %}
 
 {% load staticfiles %}
 
 {% block title %}Rango{% endblock %}
 
-{% block body_block %}
-    <h1>Add a Category</h1>
+{% block header_block %}Add a Category{% endblock %}
 
+{% block page_block %}
     <form id="category_form" method="post" action="{% url 'add_category' %}">
         {% csrf_token %}
         {% for hidden in form.hidden_fields %}
