--- a/tango_with_django_project/templates/rango/category.html
+++ b/tango_with_django_project/templates/rango/category.html
@@ -1,12 +1,12 @@
-{% extends 'base.html' %}
+{% extends 'page_header.html' %}
 
 {% load staticfiles %}
 
 {% block title %}{{ category_name }}{% endblock %}
 
-{% block body_block %}
-    <h1>{{ category_name }}</h1>
+{% block header_block %}{{ category_name }}{% endblock %}
 
+{% block page_block %}
     {% if category %}
         {% if user.is_authenticated %}
             <a href="{% url 'add_page' category.slug %}">Add a new page to this category</a> <br/>
