--- a/tango_with_django_project/templates/registration/password_change_done.html
+++ b/tango_with_django_project/templates/registration/password_change_done.html
@@ -1,6 +1,5 @@
-{% extends "base.html" %}
+{% extends "page_header.html" %}
 
-{% block body_block %}
-<h1>Password changed</h1>
-    <p>Your password has been changed successfully.</p>
-{% endblock %}
+{% block header_block %}Password changed{% endblock %}
+
+{% block page_block %}<p>Your password has been changed successfully.</p>{% endblock %}
