--- a/tango_with_django_project/templates/registration/password_change_form.html
+++ b/tango_with_django_project/templates/registration/password_change_form.html
@@ -1,7 +1,8 @@
-{% extends "base.html" %}
+{% extends "page_header.html" %}
 
-{% block body_block %}
-<h1>Change Password</h1>
+{% block header_block %}Change Password{% endblock %}
+
+{% block page_block %}
     <form method="post" action=".">
         {% csrf_token %}
         {{ form.as_p }}
