--- a/tango_with_django_project/templates/base.html
+++ b/tango_with_django_project/templates/base.html
@@ -35,8 +35,10 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
+
                 <li><a href="{% url 'index' %}">Home</a></li>
                 {% if user.is_authenticated %}
+                <li><a href="{% url 'profile' user.username %}">Profile</a></li>
                 <li><a href="{% url 'auth_password_change' %}">Change Password</a></li>
                 <li><a href="{% url 'auth_logout' %}?next=/rango/">Logout</a></li>
                 <li><a href="{% url 'add_category' %}">Add a New Category</a></li>
@@ -45,8 +47,6 @@
                 <li><a href="{% url 'auth_login' %}">Login</a></li>
                 {% endif %}
                 <li><a href="{% url 'about' %}">About</a></li>
-                <li><a href="{% url 'search' %}">Search</a></li>
-
             </ul>
         </div>
     </div>
