--- a/tango_with_django_project/templates/rango/category.html
+++ b/tango_with_django_project/templates/rango/category.html
@@ -7,6 +7,39 @@
 {% block header_block %}{{ category_name }}{% endblock %}
 
 {% block page_block %}
+    {% if user.authenticated %}
+    <div class="row" id="search">
+        <div class="panel panel-primary">
+            <br />
+
+            <form class="form-inline" id="user_form" method="post" action="{% url 'category' category.slug %}">
+                {% csrf_token %}
+                <!-- Display the search form elements here -->
+                <input class="form-control" type="text" size="50" name="query" value="" id="query" />
+                <input class="btn btn-primary" type="submit" name="submit" value="Search" />
+            </form>
+
+            <div class="panel">
+                {% if result_list %}
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Results</h3>
+                        <!-- Display search results in an ordered list -->
+                        <div class="panel-body">
+                            <div class="list-group">
+                                {% for result in result_list %}
+                                    <div class="list-group-item">
+                                        <h4 class="list-group-item-heading"><a href="{{ result.link }}">{{ result.title }}</a></h4>
+                                        <p class="list-group-item-text">{{ result.summary }}</p>
+                                    </div>
+                                {% endfor %}
+                            </div>
+                        </div>
+                    </div>
+                {% endif %}
+            </div>
+        </div>
+    </div>
+    {% endif %}
     {% if category %}
         {% if user.is_authenticated %}
             <a href="{% url 'add_page' category.slug %}">Add a new page to this category</a> <br/>
