made an attempt to get images working

--- a/tango_with_django_project/templates/rango/about.html
+++ b/tango_with_django_project/templates/rango/about.html
@@ -13,6 +13,6 @@
         {% else %}
             This appears to be your first time here. Welcome!
         {% endif %} <br />
-        <img src="{% static 'me.jpg' %}" alt="Dr. Cox says 'deal with it!'"/>
+        <img src="{% static 'me.jpg' %}" alt="picture of me"/>
     <p>This tutorial put together by Charles Townley, 2063602</p>
 {% endblock %}
