--- a/tango_with_django_project/templates/rango/add_page.html
+++ b/tango_with_django_project/templates/rango/add_page.html
@@ -6,8 +6,8 @@
 
 {% block body_block %}
 {% if category %}
-    <form role="form" id="page_form" method="post" action="{% url 'add_page' %}">
-        <h2 class="form-signin-heading">Add a Page to <a href="/rango/category/{{category.slug}}">{{category.name}}</a></h2>
+    <form role="form" id="page_form" method="post" action="{% url 'add_page' category.slug %}">
+        <h2 class="form-signin-heading">Add a Page to <a href="/rango/category/{{ category.slug }}">{{ category.name }}</a></h2>
 
             {% csrf_token %}
             {% for hidden in form.hidden_fields %}
@@ -20,7 +20,7 @@
                 {{ field }} <br/>
             {% endfor %}
             <br/>
-        <button class="btn btn-primary" type="submit" name="submit">Add Page</button
+        <button class="btn btn-primary" type="submit" name="submit">Add Page</button>
     </form>
 {% else %}
     <p>This category does not exist.</p>
